feat: detail access control by casbin - chore(deps): update and tidy up
