# api/v1/router.go
@@ -44,6 +44,7 @@ func setupRoutes(router *gin.RouterGroup) {
 		usersAPI.GET("/:username", users.Show)
 		usersAPI.PATCH("/:username", users.Update)
 		usersAPI.DELETE("/:username", users.Destroy)
+		usersAPI.PATCH("/:username/traffic", users.Traffic)
 		usersAPI.GET("/:username/groups", users.Groups)
 		usersAPI.GET("/:username/nodes", users.Nodes)
 		usersAPI.GET("/:username/services", users.Services)
@@ -67,6 +68,7 @@ func setupRoutes(router *gin.RouterGroup) {
 		nodesAPI.PATCH("/:nid", nodes.Update)
 		nodesAPI.DELETE("/:nid", nodes.Destroy)
 		nodesAPI.GET("/:nid/users", nodes.Users)
+		nodesAPI.PATCH("/:nid/users/:username/traffic", nodes.Traffic)
 		nodesAPI.GET("/:nid/services", nodes.Services)
 		nodesAPI.GET("/:nid/token", nodes.AccessToken)
 		nodesAPI.POST("/:nid/token", nodes.GenerateToken)
